force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Internal object. Information when an unexpected error occurs.</description>

    <label>MBC Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>MBC Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBC Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>