force-app/main/default/objects/ErrorLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>A list of the method calls when an application exception occurs.</description>
    <inlineHelpText>A list of the method calls when an application exception occurs.</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>