force-app/main/default/objects/ErrorLog__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Exception type that generated the error.</description>
    <inlineHelpText>Exception type that generated the error.</inlineHelpText>
    <label>Type</label>
    <type>TextArea</type>
</CustomField>