force-app/main/default/objects/ErrorLog__c/listViews/AllErrorLogs.listView-meta.xml
<ListView>
    <fullName>AllErrorLogs</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Error Logs</label>
    <language>en_US</language>
</ListView>